xidlc/tests/invalid/http_stream_mutually_exclusive.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidMutuallyExclusiveStreamService {
    @server-stream
    @client-stream
    @stream-codec("ndjson")
    @post(path = "/events")
    string exchange(string payload);
};
